--- a/index.html
+++ b/index.html
@@ -11,8 +11,77 @@
     <div id="p5-background"></div>
 
     <div id="content">
+    <header>
         <h1>Yaratıcı Kodlama Atölyesine Giriş</h1>
-        </div>
+        <p><strong>Eğitmen:</strong> Bora Aydıntuğ</p>
+        <p><strong>Email:</strong> <a href="mailto:bora.aydintug@gmail.com">bora.aydintug@gmail.com</a></p>
+    </header>
+
+    <section id="atolye-detaylari">
+        <h2>Atölye Detayları</h2>
+        <p><strong>Süre:</strong> 6 hafta</p>
+        <p><strong>Gün ve Saat:</strong> Salı ya da Perşembe 20:00 - 22:00</p>
+        <p><strong>Başlangıç Tarihleri:</strong> 8 Nisan 2025 Salı ve 10 Nisan 2025 Perşembe</p>
+        <p><strong>Bitiş Tarihleri (Son Ders):</strong> 13 Mayıs 2025 Salı ve 15 Mayıs 2025 Perşembe</p>
+        <p><strong>Yer:</strong> Uzaktan, Google Meet aracılığıyla</p>
+        <p><strong>Teknik Seviye:</strong> Herhangi bir ön bilgi gerektirmez.</p>
+    </section>
+
+    <section id="atolye-hakkinda">
+        <h2>Atölye Hakkında</h2>
+        <p>Bilgiden ziyade anlama odaklı bir yaklaşımla, ucu tamamen açık, deneysel ve eğlenceli bir keşfe çıkacağız. İlk dersten itibaren görsel çıktılar alarak programlamayı eğlenceli ve deneysel bir ifade biçimi olarak öğreneceğiz.</p>
+    </section>
+
+    <section id="haftalik-program">
+        <h2>Haftalık Program</h2>
+        <ul>
+            <li><strong>1. Hafta:</strong> Yaratıcı kodlama ve P5.js’e giriş
+                <ul>
+                    <li>Bilgiden ziyade anlama odaklı olmanın tanımı</li>
+                    <li>Yaratıcı kodlama nedir?</li>
+                    <li>Diller, derinlik (performans) vs kolaylık</li>
+                    <li>Modus Operandum: bir süre sadece iki pencere üzerinden düşüneceğiz.</li>
+                    <li>P5.js editör arayüzü</li>
+                    <li>P5.js program yapısı</li>
+                    <li>Koordinat sistemi</li>
+                    <li>İlk görsel (rect)</li>
+                    <li>Referans</li>
+                    <li>Oto-portre</li>
+                    <li>Recap (üzerinden geç ve rect’in bir abstraction olduğunu anlat)</li>
+                    <li>Dopamin seed: Çizim yapmayı göster</li>
+                </ul>
+            </li>
+            <li><strong>2. Hafta:</strong> Değişkenler, Hareket, Mantık
+                <ul>
+                    <li>Ders sırasında ikili gruplarla 2 adet problem çözdür</li>
+                </ul>
+            </li>
+            <li><strong>3. Hafta:</strong> Translation, Rotation, For Loops
+                <ul>
+                    <li>Çizdiğin bir şeyin sayısını 10’a çoğalt.</li>
+                    <li>Dopamin seed: For loops with offsets</li>
+                </ul>
+            </li>
+            <li><strong>4. Hafta:</strong> Fizik Motorları ve Matematiksel Dostlarımız = random(), noise(), sin(), map()
+                <ul>
+                    <li>Random walker (metalleri simüle ettir)</li>
+                    <li>Düşen top, seken top, farklı yöntemler.</li>
+                    <li>Fizik library’lerini ve 2 boyutlu ortamda fizik simülasyonu hangi kullanımları mümkün kılar</li>
+                </ul>
+            </li>
+            <li><strong>5. Hafta:</strong> Array’ler (Class’lar)
+                 <ul>
+                    <li>Derinlik gibi derinlik maşallah.</li>
+                </ul>
+            </li>
+            <li><strong>6. Hafta:</strong> İnteraktivite - Mouse, Key functions, UI, mikrofon, webcam</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Bora Aydıntuğ</p>
+        </footer>
+</div>
 
     <script src="sketch.js"></script>
 </body>
